--- a/style.css
+++ b/style.css
@@ -1,64 +1,69 @@
 body {
-    margin: 0;
-    background-color: #f8f8f8;
-    color: #212427
+  margin: 0;
+  background-color: #f8f8f8;
+  color: #212427;
 }
 
 h1 {
-    width: fit-content;
-    margin: auto;
+  width: fit-content;
+  margin: auto;
 }
 
 .caixa {
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
 .pai {
-    width: 80%;
-    height: 350px;
-    margin: auto;
-    background-color: antiquewhite;
-    border: solid 2px #212427;
+  width: 80%;
+  height: 350px;
+  margin: auto;
+  background-color: antiquewhite;
+  border: solid 2px #212427;
 
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: row;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
 }
 
 .filho {
-    width: 80px;
-    height: 80px;
-    border-radius: 50px;
-    text-align: center;
+  width: 80px;
+  height: 80px;
+  border-radius: 50px;
+  text-align: center;
 }
 
 .cor1 {
-    background-color: #ED145B;
+  background-color: #ed145b;
+  order: 1;
 }
 
 .cor2 {
-    background-color: #63B1BC;
+  background-color: #63b1bc;
+  order: 3;
+  align-self: flex-end;
 }
 
 .cor3 {
-    background-color: #EFB661;
+  background-color: #efb661;
+  order: 2;
+  align-self: center;
 }
 
 .instrucoes {
-    width: 80%;
-    margin: auto;
-    text-align: left;
+  width: 80%;
+  margin: auto;
+  text-align: left;
 }
 
 .footer {
-    background-color: antiquewhite;
-    height: 130px;
-    margin-top: 50px;
-    padding-top: 20px;
-    text-align: center;
+  background-color: antiquewhite;
+  height: 130px;
+  margin-top: 50px;
+  padding-top: 20px;
+  text-align: center;
 }
 
 img {
-    width: 20%;
+  width: 20%;
 }
